style/classList.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}


/**************Header Style ***************/

.header {
    position: relative;
}

.dash-header {
    background: #603996;
    color: #fff;
    padding: 34px 81px;
    position: relative;
}

.dash-header .dash-logo {
    padding-right: 11px;
}

.dash-header .dash-profile .name {
    padding-top: 9px;
}

.dash-header .dash-profile {
    display: flex;
    text-align: right;
    position: absolute;
    right: 95px;
    top: 45px;
}

.dash-header .dash-profile p {
    font-size: 16px;
    margin-bottom: -14px;
}

.dash-header .dash-profile h1 {
    font-size: 22px;
    text-transform: uppercase;
}

.dash-header .dash-profile #image {
    border-radius: 50%;
    width: 118px;
    height: 118px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    z-index: 9;
}

.dash-header .dash-profile .image-container {
    display: flex;
}

.dash-header .dash-profile .drop-down {
    padding-top: 41px;
}

.dash-header .dash-profile #arrow {
    float: left;
    margin-left: -7px;
}

.dash-header .dash-profile ul {
    padding: 11px;
    background: #357BBC;
    border-radius: 11px;
    margin-left: -15px;
    margin-top: 25px;
    display: none;
    position: absolute;
    z-index: 5;
}

.dash-header .dash-profile ul li {
    list-style: none;
    text-align: left;
    padding-bottom: 25px;
}

.dash-header .dash-profile ul li a {
    color: white;
    text-decoration: none;
}

.extra-bg {
    background: #8467AE;
    height: 32px;
}

.extra-bg #mb-nav-icon {
    display: none;
}

.side-bar {
    background: #E5E3E3;
    width: 255px;
    height: calc(100vh - 141px);
    position: absolute;
    top: 141px;
    padding-top: 131px;
}

.side-bar .menu {
    padding: 25px 0;
    background: white;
    display: flex;
    justify-content: center
}

.body {
    background: white;
    min-height: 81vh;
    padding-left: 255px;
}

.topnav {
    overflow: hidden;
    margin-left: 60px;
}

.topnav a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 0px 0px;
    /* margin-right: 10px; */
    text-decoration: none;
    font-size: 15px;
    padding: 5px 10px;
    text-transform: uppercase;
    border: 1px inset #8467AE;
}

.topnav a:hover {
    background-color: #603996;
    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
    color: white;
}

.topnav a:active {
    background-color: #603996;
    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
    color: white;
}

.topnav .icon {
    display: none;
}

@media screen and (max-width: 600px) {
    .topnav {
        overflow: hidden;
        margin-left: 0px;
    }
    .topnav a {
        display: none;
    }
    .topnav a.icon {
        display: block;
        border: none !important;
    }
}

@media screen and (max-width: 600px) {
    .topnav.responsive {
        position: relative;
        background: linear-gradient(90deg, rgba(96, 57, 150, 0.42) 49.9%, #357BBC 99.9%);
    }
    .topnav.responsive .icon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .topnav.responsive a {
        float: none;
        display: block;
        text-align: left;
        border: none !important;
    }
}


/*------------------------------------MOBILE=--------------------------------- MOBILE------------*/

@media only screen and (max-width:615px) {
    .dash-header {
        padding: 19px 15px;
        position: relative;
        display: flex;
        justify-content: space-around;
    }
    .dash-header .dash-profile {
        display: flex;
        position: relative;
        right: 0px;
        top: 0px;
        width: 63%;
    }
    .dash-header .dash-profile p {
        font-size: 14px;
    }
    .dash-header .dash-profile h1 {
        font-size: 16px;
    }
    .dash-header .dash-profile #image {
        width: 68px;
        height: 68px;
    }
    /*.dash-header .dash-profile .image-container{
		display: flex;
	}*/
    .dash-header .dash-profile .drop-down {
        padding-top: 19px;
    }
    /*.dash-header .dash-profile #arrow{
		float: left;
		margin-left: -7px;
	}*/
    /*.extra-bg{
		background: linear-gradient(90deg, rgba(96, 57, 150, 0.42) 49.9%, #357BBC 99.9%);
		height:31px;
	}*/
    .dash-header .dash-logo {
        padding-right: 11px;
    }
    .extra-bg {
        position: relative;
    }
    .side-bar {
        background: #E5E3E3;
        width: 0px;
        height: calc(100vh - 141px);
        overflow: hidden;
        position: absolute;
        top: 145px;
        padding-top: 51px;
        transition: all ease .3s;
    }
    .extra-bg #mb-nav-icon {
        display: block;
        position: absolute;
        top: 8px;
        left: 15px;
        color: white;
        font-size: 18px;
    }
    .wrapper .videos {
        margin-left: 50px;
    }
    .side-bar .menu {
        padding: 21px 0;
    }
    .body {
        min-height: calc(100vh - 141px);
        padding-left: 1px;
    }
}

@media only screen and (max-width:341px) {
    .side-bar {
        top: 145px;
    }
    .wrapper {
        margin-bottom: 0px;
    }
}

footer {
    background: #57489D;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
}


/****************************************/

#main {
    width: 100%;
    height: 100%;
    min-height: 100%;
    margin: 0 auto;
    padding: 0;
}

section {
    width: 75%;
    height: 100vh;
    min-height: 100vh;
    padding: 50px 10px;
    margin: 0 auto;
}

.access .wrapper {
    min-height: 150px !important;
    overflow: scroll;
}

.wrapper {
    display: flex;
    border: 1px solid #C4C4C4;
    box-sizing: border-box;
    box-shadow: 4px 4px 4px 4px #C4C4C4;
    margin-bottom: 10px;
    width: 100%;
}

.wrapper:after {
    content: "";
    display: table;
    clear: both;
}

#course-link {
    text-decoration: none;
}

hr {
    border: 1px solid #00000029;
    margin: 0 0 5px 0;
    box-shadow: 2px 2px 2px 2px #00000010;
}

.access .description {
    width: 100% !important;
}

.description {
    padding-top: 20px;
    width: 40%;
    padding-left: 30px;
    padding-right: 30px;
    height: 200px;
}

.description a {
    text-decoration: none;
    text-transform: capitalize;
}

.description p {
    margin-bottom: 0;
    margin-top: 3px;
}

p#descText {
    line-height: 22px;
    text-align: justify;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
}

.space {
    width: 8%;
}

.vertical-space {
    height: 50%;
}

.videos {
    width: 30%;
    padding: 10px;
    margin: 0 auto;
}

video {
    width: 100% !important;
}

.enroll_btn {
    padding-top: 20px;
    width: 22%;
    margin-top: 30px;
    text-align: center;
}

.enroll_btn button {
    padding: 10px;
    background: #603996;
    border: 3px solid #FFFFFF;
    border-radius: 2px;
    color: #fff;
}

.enroll_btn button a {
    text-decoration: none;
    color: #FFFFFF;
}

.thumbnail_btn {
    padding: 10px;
    background: #603996;
    border: 3px solid #FFFFFF;
    border-radius: 2px;
    color: #fff;
}

#participants,
#date_created,
#course_stats {
    opacity: 0.6;
}


/* Dropdown Buttons */

#dropbutton {
    outline: none;
    margin-left: 20px;
    margin-bottom: 30px;
    background: #603996;
    border: 3px solid #FFFFFF;
    border-radius: 2px;
    color: white;
    padding: 15px 25px;
    cursor: pointer;
    border: 1px solid #ffffff;
    box-sizing: border-box;
    border-radius: 34px;
}

.dropbtn {
    outline: none;
    display: flex;
    margin-top: 10px;
}

[option-nav] h4 {
    float: right;
    color: #000;
    text-transform: capitalize;
}

[option-nav] {
    background: rgba(132, 103, 174, 0.4);
    padding: 0 70px 0 40px;
    margin-bottom: 15px;
    box-sizing: border-box;
    line-height: 0;
    overflow: hidden;
}


/* Dropdown button on hover & focus */

.dropbtn1:hover,
.dropbtn1:focus {
    background-color: #2980B9;
}

.dropbtn:hover,
.dropbtn:focus {
    background-color: rgba(0, 0, 0, 0.219);
}


/* The container <div> - needed to position the dropdown content */

.dropdown {
    position: relative;
    display: inline-block;
}


/* Dropdown Content (Hidden by Default) */

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1000;
}


/* Links inside the dropdown */

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}




/* Change color of dropdown links on hover */

.dropdown-content a:hover {
    background-color: #ddd
}


/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */

.show {
    display: block;
}



/* Class List Enrolment Style */
.total-enrolment{
    color: grey;
    font-size: 14px;
    font-style: italic;
}


@media screen and (max-width: 1000px) {
    section {
        width: 90%;
    }
}

@media screen and (max-width: 650px) {
    .wrapper {
        display: table;
    }
    .description,
    .video,
    .enroll_btn {
        width: 100%;
        text-align: center;
    }
    body,
    #main {
        max-width: 100vw;
    }
    body {
        -webkit-text-size-adjust: none;
    }
}

